--- a/03_GWAS/CHOL.Rmd
+++ b/03_GWAS/CHOL.Rmd
@@ -3,7 +3,7 @@ title: "CHOL"
 author: "Angela Andaleon"
 output: html_document
 ---
-##EDIT QCSTEP2 LINE
+
 ##In RStudio
 
 ```{r CHOL}
@@ -18,7 +18,7 @@ shapiro.test(data$CHOL)
 ##In command line
 
 ```{bash pheno}
-plink --bfile /home/angela/QC/QCStep2/QCStep2 --maf 0.05 --linear --adjust --pheno /home/angela/GWAS/Phenotypes/YRI_phenotypes.txt --pheno-name CHOL --out /home/angela/GWAS/CHOL/CHOL
+plink --bfile /home/angela/px_yri_chol/QC/QCStep6/QCStep6k/QCStep6k --linear --adjust --pheno /home/angela/GWAS/Phenotypes/YRI_phenotypes.txt --pheno-name CHOL --out /home/angela/GWAS/CHOL/CHOL
 ```
 
 ##In RStudio
